--- a/lesson_6_docker_homework/Dockerfile
+++ b/lesson_6_docker_homework/Dockerfile
@@ -5,7 +5,7 @@ RUN apt update
 RUN apt install git -y
 RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
 
-WORKDIR ~/boxfuse-sample-java-war-hello
+WORKDIR boxfuse-sample-java-war-hello
 RUN apt install maven -y
 RUN mvn package
 
