--- a/lesson11_jenkins/deploy/Dockerfile
+++ b/lesson11_jenkins/deploy/Dockerfile
@@ -1,1 +1,5 @@
-FROM openjdk:8u151-stretch
+#FROM openjdk:8u151-stretch
+FROM tomcat:jre11
+
+ADD target/*war /usr/local/tomcat/webapps 
+EXPOSE 8080 
