--- a/lesson11_jenkins/Dockerfile
+++ b/lesson11_jenkins/Dockerfile
@@ -8,7 +8,9 @@ RUN apt-get update
 
 # Confugure ssh client
 ADD id_rsa /root/.ssh/id_rsa
-RUN chmod 611 /root/.ssh/id_rsa
+RUN chmod 600 /root/.ssh/id_rsa
+RUN touch /root/.ssh/known_host
+RUN chmod 666 /root/.ssh/known_host
 ADD deploy/Dockerfile .
 RUN chmod +x Dockerfile
 
